# ACCIONESBUSQUEDA

./: .dockerignore  .env.example  .fastapicloudignore  .gitignore  ANALISIS_PRUEBA_MERCADO_V2.ipynb  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  main.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  zbpack.json
agents/: __init__.py  alert_agent.py  base.py  company_risk_agent.py  corporate_actions_agent.py  country_risk_agent.py  fundamental_agent.py  investment_director.py  investment_memory.py  macro_agent.py  market_dependency_agent.py  market_monitor.py  news_agent.py  portfolio_agent.py  sentiment_agent.py  technical_agent.py  valuation_agent.py  watchlist_agent.py
apis/: __init__.py  app.py
cache/: __init__.py  manager.py
config/: __init__.py  settings.py
dashboard/: app.js  index.html  login.html  manifest.json  styles.css  sw.js  voice.js
data/: __init__.py  knowledge_graph_seed.py
database/: __init__.py  engine.py  models.py  url.py
domain/: __init__.py  allocation_plan.py  broker.py  correlations.py  daily_trade.py  dashboard.py  discovery.py  entities.py  enums.py  knowledge_graph.py  micro_portfolio.py  ops.py  portfolio_demo.py  proposal.py  reports.py  risk.py  sentiment.py  sentiment_v2.py  voice.py
k8s/: deployment.yaml
models/: __init__.py  schemas.py
orchestration/: container.py
providers/: __init__.py  interfaces.py
reports/: __init__.py  writer.py
services/: __init__.py  alert_service.py  alpaca_order_service.py  analysis_service.py  audit_service.py  auto_execute_service.py  (+35 more)
(+126 files in other folders)
