[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexbuy-investment-committee"
version = "1.0.0"
description = "Professional multi-agent investment committee platform"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi[standard]>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "tenacity>=8.2",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "dependency-injector>=4.41",
    "apscheduler>=3.10",
    "yfinance>=0.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "duckduckgo-search>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "orjson>=3.9",
    "scipy>=1.12",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
nexbuy = "main:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "services*", "providers*", "apis*", "database*", "cache*", "models*", "reports*", "config*", "utils*", "domain*", "orchestration*", "data*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
